Add normalise and empty Sass partials for vars, global, typography, & header

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Will Wallace – Web design &amp; development</title>
+	<link rel="stylesheet" href="css/willwallace.min.css">
 </head>
 <body>
 	<header>
