--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 bodyclass: body--home
 ---
-{% assign items = site.case-studies | sort: 'date' | reverse %}
+{% assign items = site.case-studies | sort: "sortOrder", "last" | reverse %}
 {% for item in items %}
 <section class="section" style="color: #{{item.color}}">
 	<div class="section__left">
